gtkpod V0.96.CVS
       NEW: transition to libgpod to read/write iTunesDB. See
       www.gtkpod.org/libgpod.html for details.

       NEW: script to sync contacts from a Palm (via jppy
       http://wiki.zanu.org.uk/jppy). Thanks to Nick Piper,
       http://www.nickpiper.co.uk/)

       NEW: type-ahead search functionality. Thanks to Nick Piper,
       http://www.nickpiper.co.uk/

       IMPROVEMENT: added comment, category, description, podcast url,
       podcast rss, subtitle fields and release date to displayable
       fields.

       IMPROVEMENT: Support playcounts on iPod Shuffle as well

       UPDATED: Italian translation (thanks to Edward Matteucci)

       BUGFIX: 'Check iPod's files' could crash under certain
       circumstances (thanks to David Mansfield for the patch).

       BUGFIX: Lame's Replay Gain was read incorrectly for certain
       values. Thanks to Chris Brotherton for tracking this down.

gtkpod V0.95.CVS
       NEW: script to sync addressbooks in ldif format provided by
       Sebastien BERIDOT.

       NEW: script to sync kNotes (KDE note program) provided by
       Sebastian Scherer.

       CHANGE: MP3 tags: use 'Band/Orchestra/Accompaniment' (TPE2) as
       artist if it exists. Otherwise use 'Lead artist/Lead
       performer/Soloist/Performing group' (TPE1) as before. Let me
       know if this causes problems for you.

       UPDATED Hebrew translation (thanks to Assaf Gillat)

       SAFETY: call sync() and flush all buffers to the iPod after
       writing the iTunesDB -- should minimise filesystem errors
       caused by people disconnecting the iPod without unmounting.

       BUGFIX: Copying playlists by drag and drop could confuse smart
       playlists referencing these playlists. Fixed.

       After copying playlists by drag and drop, smart playlists
       refering to these playlists could become confused.

gtkpod V0.94.0
       NEW FEATURE: stable sorting of track view. This allows you, for